force-app/main/default/objects/Account/fields/Account_Origin__c.field-meta.xml
<CustomField>
    <fullName>Account_Origin__c</fullName>
    <description>Defines whether the account is located within the country or Out of country</description>
    <label>Account Origin</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Local</fullName>
            </value>
            <value>
                <fullName>Foreign</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>