force-app/main/default/objects/Account/fields/Brand_Name__c.field-meta.xml
<CustomField>
    <fullName>Brand_Name__c</fullName>
    <description>This field is requested by Retail Department</description>
    <label>Brand Name</label>
    <type>TextArea</type>
</CustomField>