force-app/main/default/objects/Account/fields/Portfolio_Summary__c.field-meta.xml
<CustomField>
    <fullName>Portfolio_Summary__c</fullName>
    <description>This field is currently required for Capital Market Department</description>
    <label>Portfolio Summary</label>
    <type>TextArea</type>
</CustomField>