force-app/main/default/objects/Account/fields/SharePoint_Folder__c.field-meta.xml
<CustomField>
    <fullName>SharePoint_Folder__c</fullName>
    <defaultValue>false</defaultValue>
    <label>SharePoint Folder</label>
    <type>Checkbox</type>
</CustomField>