force-app/main/default/objects/Account/fields/Shop_Name__c.field-meta.xml
<CustomField>
    <fullName>Shop_Name__c</fullName>
    <description>This field is requested by Retail Department</description>
    <label>Shop Name</label>
    <type>TextArea</type>
</CustomField>