force-app/main/default/objects/Account/fields/Website_URL__c.field-meta.xml
<CustomField>
    <fullName>Website_URL__c</fullName>
    <description>This will help the Company to give their website link</description>
    <label>Website URL</label>
    <type>Url</type>
</CustomField>